eks/ingress.yaml
piVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"alb"},"labels":{"app":"testingress","namespace":"kubetest"},"name":"testingress","namespace":"kubetest"},"spec":{"backend":{"serviceName":"testservice","servicePort":8080}}}
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: testalb
  creationTimestamp: "2020-12-22T08:19:05Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 3
  labels:
    app: testdeployment
    namespace: kubetest
  name: testingress
  namespace: kubetest
  resourceVersion: "613797"
  selfLink: /apis/extensions/v1beta1/namespaces/kubetest/ingresses/testingress
  uid: 9cd097fb-33fc-4ca1-81f9-fa2c93e68446
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: testservice
          servicePort: 80
        path: /*
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: k8s-kubetest-testingr-8d7c74d665-1354127489.ap-northeast-2.elb.amazonaws.com
