eks/service.yaml
piVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"testdeployment"},"name":"testservice","namespace":"kubetest"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"testdeployment","namespace":"kubetest"}}}
  creationTimestamp: "2020-12-22T08:07:39Z"
  labels:
    app: testdeployment
    namespace: kubetest
  name: testservice
  namespace: kubetest
  resourceVersion: "321028"
  selfLink: /api/v1/namespaces/kubetest/services/testservice
  uid: f363dff8-20be-4f66-a29d-c817570b833e
spec:
  clusterIP: 10.100.105.7
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32331
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: testdeployment
    namespace: kubetest
  sessionAffinity: None
  type: NodePort
